fix color scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,15 +14,11 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-    --bg-opacity: 1;
-    @apply bg-[#f7fafc];
-    background-color: rgba(247, 250, 252, var(--bg-opacity));
+    @apply bg-gray-200;
 }
 
 ::-webkit-scrollbar-thumb {
-    --bg-opacity: 1;
-    @apply bg-[#edf2f7];
-    background-color: rgba(237, 242, 247, var(--bg-opacity));
+    @apply bg-gray-300;
 }
 
 ::-webkit-scrollbar-thumb {
